# artificial-intelligence

./: .gitignore  README.md
chess-engine/ai-engine/: Cargo.toml  pyproject.toml  todo.markdown
chess-engine/ai-engine/src/: Board.py  MoveGenerator.py  Piece.py  ai_engine.pyi  ai_engine.rs  board_wrapper.rs  flask_app.py  main.py  utils.py
chess-engine/ai-engine/src/ai/: ai.rs  ai_player.rs  ai_utils.rs  constants.rs  minimax.rs  minimax_alpha_beta.rs  minimax_alpha_beta_move_order.rs  mod.rs  negamax.rs  random_player.rs
chess-engine/ai-engine/src/ai/piece/: piece.rs
chess-engine/ai-engine/src/ai/player/: mod.rs  random_player.rs
chess-engine/ai-engine/src/common/: board_piece.rs  contants.rs  enums.rs  mod.rs  piece.rs  piece_move.rs  piece_utils.rs
chess-engine/ai-engine/src/controller/: __init__.py
chess-engine/ai-engine/src/dto/: dto_utils.rs  mod.rs  piece_dto.rs  piece_move_dto.rs
chess-engine/ai-engine/src/game/: board.rs  board_state.rs  contants.rs  flask_app.py  main.py  mod.rs  move_generator.rs  move_generator_helper.rs  zobrist.rs  zobrist_utils.rs
chess-engine/ai-engine/src/game/model/: Board.py  MoveGenerator.py  utils.py
chess-engine/ai-engine/src/model/: Board.py  BoardPiece.py  MoveGenerator.py  Piece.py  utils.py
chess-engine/ai-engine/src/model/dto/: BoardDTO.py  (+3 more)
chess-engine/ai-engine/test/: BoardTest.py  MoveGeneratorTest.py
chess-engine/api/: Cargo.toml
chess-engine/api/src/ai/: ai.rs  ai_engine.pyi
chess-engine/api/src/game/: flask_app.py  main.py
chess-engine/api/test/: BaseTest.py  BoardTest.py  MoveGeneratorTest.py
(+77 files in other folders)
