[package]
name = "ai-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ai_engine"
crate-type = ["cdylib"]
path = "src/ai_engine.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rayon = "1.8.0"
rand = "0.8.0"