[package]
name = "ai-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ai_engine"
crate-type = ["cdylib"]
path = "src/ai/ai.rs"

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rand = "0.8.5"
